--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -48,7 +49,7 @@ p {
   margin: 40px 0;
 }
 
-button.normal{
+button.normal {
   font-size: 14px;
   font-weight: 600;
   padding: 15px 30px;
@@ -61,7 +62,7 @@ button.normal{
   transition: 0.2s;
 }
 
-button.white{
+button.white {
   font-size: 13px;
   font-weight: 600;
   padding: 11px 18px;
@@ -78,32 +79,33 @@ body {
 }
 
 /* header start */
-header{
-  display:flex;
+header {
+  display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 20px 80px;
   background: #E3E6F3;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.06);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
   z-index: 999;
   position: sticky;
   top: 0;
   left: 0;
 }
 
-#navbar{
+#navbar {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-#navbar li{
+
+#navbar li {
   display: flex;
   list-style: none;
   padding: 0 20px;
   position: relative;
 }
 
-#navbar li a{
+#navbar li a {
   text-decoration: none;
   color: #1a1a1a;
   font-weight: 600;
@@ -111,13 +113,13 @@ header{
   transition: 0.3s ease;
 }
 
-#navbar li a:hover, 
-#navbar li a.activate{
+#navbar li a:hover,
+#navbar li a.activate {
   color: #088178;
 }
 
 #navbar li a.activate::after,
-#navbar li a:hover::after{
+#navbar li a:hover::after {
   content: "";
   width: 30%;
   height: 2px;
@@ -127,8 +129,17 @@ header{
   left: 20px;
 }
 
+#mobile {
+  display: none;
+  align-items: center;
+}
+
+#close {
+  display: none;
+}
+
 /* Hero Section */
-#hero{
+#hero {
   background-image: url("../img/hero4.png");
   height: 90vh;
   width: 100%;
@@ -141,15 +152,15 @@ header{
   justify-content: center;
 }
 
-#hero h4{
+#hero h4 {
   padding-bottom: 15px;
 }
 
-#hero h1{
+#hero h1 {
   color: #088178;
 }
 
-#hero button{
+#hero button {
   background-image: url("../img/button.png");
   background-color: transparent;
   color: #088178;
@@ -161,33 +172,34 @@ header{
   font-size: 15px;
 }
 
-#feature{
+#feature {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-#feature .fe-box{
+#feature .fe-box {
   width: 180px;
   text-align: center;
-  padding: 25px 15px ;
-  box-shadow: 20px 20px 34px rgba(0,0,0,0.03);
+  padding: 25px 15px;
+  box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
   border: 1px solid #cce7d0;
   border-radius: 4px;
   margin: 15px 0;
 }
 
-#feature .fe-box:hover{
-  box-shadow: 10px 10px 54px rgba(70,62,221,0.1);
+#feature .fe-box:hover {
+  box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
 }
+
 /* img responsive */
-#feature .fe-box img{
+#feature .fe-box img {
   width: 100%;
   margin-bottom: 10px;
 }
 
-#feature .fe-box h6{
+#feature .fe-box h6 {
   display: inline-block;
   padding: 9px 8px 6px 8px;
   line-height: 1;
@@ -196,32 +208,32 @@ header{
   background-color: #fddde4;
 }
 
-#feature .fe-box:nth-child(2) h6{
+#feature .fe-box:nth-child(2) h6 {
   background-color: #cdebbc;
 }
 
-#feature .fe-box:nth-child(3) h6{
+#feature .fe-box:nth-child(3) h6 {
   background-color: #d1e8f2;
 }
 
-#feature .fe-box:nth-child(4) h6{
+#feature .fe-box:nth-child(4) h6 {
   background-color: #cdd4f8;
 }
 
-#feature .fe-box:nth-child(5) h6{
+#feature .fe-box:nth-child(5) h6 {
   background-color: #f6dbf6;
 }
 
-#feature .fe-box:nth-child(6) h6{
+#feature .fe-box:nth-child(6) h6 {
   background-color: #fff2e5;
 }
 
 /* Products Section */
-#product1{
+#product1 {
   text-align: center;
 }
 
-#product1 .pro-container{
+#product1 .pro-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -229,58 +241,58 @@ header{
   flex-wrap: wrap;
 }
 
-#product1 .pro{
+#product1 .pro {
   width: 23%;
   min-width: 250px;
   padding: 10px 12px;
   border: 1px solid #cce7d0;
   border-radius: 25px;
   cursor: pointer;
-  box-shadow: 20px 20px 30px rgba(0,0,0,0.02);
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
   margin: 15px 0;
   transition: 0.2s ease;
   position: relative;
 }
 
-#product1 .pro:hover{
-  box-shadow: 20px 20px 30px rgba(0,0,0,0.06);
+#product1 .pro:hover {
+  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
 }
 
-#product1 .pro img{
+#product1 .pro img {
   width: 100%;
   border-radius: 20px;
 }
 
-#product1 .pro .des{
+#product1 .pro .des {
   text-align: start;
   padding: 10px 0;
 }
 
-#product1 .pro .des span{
+#product1 .pro .des span {
   color: #606063;
   font-size: 12px;
 }
 
-#product1 .pro .des h5{
+#product1 .pro .des h5 {
   padding-top: 7px;
   color: #1a1a1a;
   font-size: 14px;
 
 }
 
-#product1 .pro .des i{
-  color: rgba(243,181,25);
+#product1 .pro .des i {
+  color: rgba(243, 181, 25);
   font-size: 12px;
 }
 
-#product1 .pro .des h4{
+#product1 .pro .des h4 {
   padding-top: 7px;
   font-size: 15px;
   font-weight: 700;
   color: #088178;
 }
 
-#product1 .pro .cart{
+#product1 .pro .cart {
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -295,7 +307,7 @@ header{
 }
 
 /* Banner Section */
-#banner{
+#banner {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -308,34 +320,34 @@ header{
   background-position: center;
 }
 
-#banner h4{
+#banner h4 {
   color: #fff;
   font-size: 16px;
 }
 
-#banner h2{
+#banner h2 {
   color: #fff;
   font-size: 30px;
   padding: 10px 0;
 }
 
-#banner h2 span{
+#banner h2 span {
   color: #ef3636;
 }
 
-#banner button:hover{
+#banner button:hover {
   background: #088178;
   color: #fff;
 }
 
-#sm-banner{
+#sm-banner {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
 /* sm-banner */
-#sm-banner .banner-box{
+#sm-banner .banner-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -348,39 +360,39 @@ header{
   padding: 30px;
 }
 
-#sm-banner .banner-box2{
+#sm-banner .banner-box2 {
   background-image: url("../img/banner/b10.jpg");
 }
 
-#sm-banner h4{
+#sm-banner h4 {
   color: #fff;
   font-size: 20px;
   font-weight: 300;
 
 }
 
-#sm-banner h2{
+#sm-banner h2 {
   color: #fff;
   font-size: 28px;
   font-weight: 800;
-  
+
 }
 
-#sm-banner span{
+#sm-banner span {
   color: #fff;
   font-size: 14px;
   font-weight: 500;
   padding-bottom: 15px;
-  
+
 }
 
-#sm-banner .banner-box:hover button{
+#sm-banner .banner-box:hover button {
   background: #088178;
   color: #fff;
   border: 1px solid #088178;
 }
 
-#banner3{
+#banner3 {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -388,19 +400,19 @@ header{
   margin-top: 40px;
 }
 
-#banner3 .banner-box2{
+#banner3 .banner-box2 {
   background-image: url("../img/banner/b4.jpg");
 }
 
-#banner3 .banner-box3{
+#banner3 .banner-box3 {
   background-image: url("../img/banner/b18.jpg");
 }
 
-.banner-box{
+.banner-box {
   background-image: url("../img/banner/b7.jpg");
 }
 
-#banner3 .banner-box{
+#banner3 .banner-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -419,13 +431,13 @@ header{
   font-weight: 900;
 }
 
-#banner3 h3{
+#banner3 h3 {
   color: #ec544e;
   font-size: 15px;
   font-weight: 800;
 }
 
-#newsletter{
+#newsletter {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -436,30 +448,28 @@ header{
   background-color: #041e42;
 }
 
-#newsletter h4{
+#newsletter h4 {
   font-size: 22px;
   font-weight: 700;
   color: #fff;
 }
 
-#newsletter p{
+#newsletter p {
   font-size: 14px;
   font-weight: 600;
   color: #818ea0;
 }
 
-#newsletter p span{
+#newsletter p span {
   color: #ffbd27;
 }
 
-#newsletter .form{
+#newsletter .form {
   display: flex;
   width: 40%;
-
-
 }
 
-#newsletter input{
+#newsletter input {
   height: 3.125rem;
   padding: 0 1.25em;
   font-size: 14px;
@@ -469,7 +479,7 @@ header{
   outline: none;
 }
 
-#newsletter button{
+#newsletter button {
   background-color: #088178;
   color: #fff;
   white-space: nowrap;
@@ -478,64 +488,165 @@ header{
 }
 
 /* Footer Section */
-footer{
+footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-footer .col{
+footer .col {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin-bottom: 20px;
 }
 
-footer .logo{
+footer .logo {
   margin-bottom: 30px;
 }
 
-footer h4{
+footer h4 {
   font-size: 14px;
   padding-bottom: 20px;
 }
 
-footer p{
+footer p {
   font-size: 13px;
   margin: 0 0 8px 0;
 }
 
-footer a{
+footer a {
   font-size: 13px;
   text-decoration: none;
   color: #222;
   margin-bottom: 10px;
 }
 
-footer .follow{
+footer .follow {
   margin-top: 20px;
 }
 
-footer .follow{
+footer .follow {
   color: #465b52;
   padding-right: 4px;
   cursor: pointer;
 }
 
-footer .install .row img{
+footer .install .row img {
   border: 1px solid #088178;
   border-radius: 6px;
 }
 
-footer .install img{
+footer .install img {
   margin: 10px 0 15px 0;
 }
 
-footer .follow i:hover,footer a:hover{
+footer .follow i:hover,
+footer a:hover {
   color: #088178;
 }
 
-footer .copyright{
+footer .copyright {
   width: 100%;
   text-align: center;
+}
+
+/* Media Queries */
+@media (max-width: 799px) {
+  .section-p1 {
+    padding: 40px 40px;
+  }
+
+  #product1 .pro-container {
+    justify-content: center;
+  }
+
+  #product1 .pro {
+    margin: 15px;
+  }
+
+  #navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: #E3E6F3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: 0.3s ease;
+  }
+
+  #navbar.active {
+    right: 0px;
+  }
+
+  #navbar li {
+    margin-bottom: 25px;
+  }
+
+  #mobile {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+
+  #mobile i {
+    color: #1a1a1a;
+    font-size: 24px;
+    padding-left: 20px;
+  }
+
+  #close {
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+  }
+
+  #lg-bag {
+    display: none;
+  }
+
+  #hero {
+    height: 90vh;
+    padding: 0 80px;
+    background-position: top 30% right 30%;
+    background-size: cover;
+  }
+
+  #feature {
+    justify-content: center;
+  }
+
+  #feature .fe-box {
+    margin: 15px 15px;
+  }
+
+  #banner {
+    height: 20vh;
+  }
+
+  #sm-banner .banner-box {
+    min-width: 100%;
+    height: 30vh;
+  }
+
+  #banner3 {
+    padding: 0 40px;
+  }
+
+  #banner3 .banner-box {
+    width: 28%;
+  }
+
+  #newsletter .form {
+    width: 70%;
+  }
 }
