--- a/css/style.css
+++ b/css/style.css
@@ -565,7 +565,7 @@ footer .copyright {
     margin: 15px;
   }
 
-  #navbar {
+  #navbar { 
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -649,4 +649,70 @@ footer .copyright {
   #newsletter .form {
     width: 70%;
   }
+}
+
+@media (max-width: 477px) {
+  header {
+    padding: 10px 30px;
+}
+
+  h2 {
+    font-size: 32px;
+}
+  h1 {
+    font-size: 38px;
+}
+  #hero {
+    padding: 0 20px;
+    background-position: 60%;
+    background-size: cover;
+}
+  .section-p1 {
+    padding: 20px;
+  }
+
+  #feature{
+    justify-content: space-between;
+  }
+
+  #feature .fe-box {
+    width: 155px;
+    margin: 0 0 15px 0px;
+}
+
+#product1 .pro {
+    width: 100%;
+}
+
+#banner {
+    height: 40vh;
+}
+
+#sm-banner .banner-box {
+    height: 40vh;
+}
+
+#sm-banner .banner-box2 {
+    margin-top: 20px;
+}
+
+#banner3 {
+    padding: 0 20px;
+}
+
+#banner3 .banner-box {
+    width: 100%;
+}
+
+#newsletter .form {
+    width: 100%;
+}
+
+#newsletter {
+  padding: 40px 20pxS;
+}
+
+footer .copyright{
+  
+}
 }
